# alethia

./: .env.example  .gitignore  README.md  context.txt  docker-compose.yml  last_msg.txt  out.txt  pyproject.toml  test_vercel.py  user_msgs.txt
agent/: __init__.py  graph.py  requirements.txt  state.py
agent/nodes/: classifier.py  fetcher.py  fixer.py  pr_creator.py  stopper.py  validator.py
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: github.py  health.py  runs.py  webhook.py
backend/app/core/: auth.py  config.py  log_parser.py
backend/app/db/: __init__.py  client.py
backend/app/github/: auth.py
backend/migrations/: 001_core_tables.sql  002_add_columns.sql  002_enable_rls.sql  003_saas_readiness.sql  004_delete_policy.sql
backend/scripts/: push_test_fixtures.py  send_test_webhook.py
backend/tests/: test_log_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: DecryptedText.jsx  GlitchLoader.jsx  StatusBadge.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AuthCallback.jsx  Dashboard.jsx  LandingPage.jsx  RunDetails.jsx
runner/: Dockerfile
